@@ -1,4 +1,4 @@
-function randomNumber(min: number, max: number) {
+export function randomNumber(min: number, max: number) {
 	return Math.random() * (max - min) + min;
 }
 
